--- a/Tic-Tac-Toe/Tic-Tac-Toe.csproj
+++ b/Tic-Tac-Toe/Tic-Tac-Toe.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gameboard.cs" />
     <Compile Include="Playeroneandtwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
